Fixed a rare hang in ConcurrentGenericReadInputStream shutdown.  Fixed bugs in bin/SamLoader when processing more than 2 samples.  Replaced AccessionToTaxid HashMap with ObjectIntMap.